Fix HTML encoding issues and update links

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ footer {
     <header>
         <div class="logo">MyWebsite</div>
         <nav>
-            <a href="file:///C:/Users/admin/OneDrive/Desktop/index.html">Home</a>
-            <a href="file:///C:/Users/admin/OneDrive/Desktop/sangha.html">About</a>
-            <a href="file:///C:/Users/admin/OneDrive/Desktop/service.html">Services</a>
-            <a href="file:///C:/Users/admin/OneDrive/Desktop/PRO.html">Form</a>
+            <a href="index.html">Home</a>
+            <a href="sangha.html">About</a>
+            <a href="service.html">Services</a>
+            <a href="PRO.html">Form</a>
         </nav>
     </header>
 
@@ -109,3 +109,4 @@ footer {
 
 </body>
 </html>
+
