--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ footer {
         <div class="logo">MyWebsite</div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="sangha.html">About</a>
+            <a href="kadam.html">About</a>
             <a href="service.html">Services</a>
             <a href="PRO.html">Form</a>
         </nav>
@@ -109,4 +109,5 @@ footer {
 
 </body>
 </html>
+
 
