--- a/kadam.html
+++ b/kadam.html
@@ -66,7 +66,7 @@
 <body>
 
     <div class="profile-card">
-        <img src="Profile.jpg" alt="Profile Photo">
+        <img src="images/profile.jpg" alt="Profile Photo">
 
         <h1 class="name">Mr.SANGHRAJ WAGH</h1>
         <p class="title">Web Developer</p>
@@ -85,3 +85,4 @@
 
 </body>
 </html>
+
